--- a/beatbuzz-ui/client/src/App.css
+++ b/beatbuzz-ui/client/src/App.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* max-width: 600px;
+  margin: 0 auto; */
 }
 
 .input-field {
