--- a/beatbuzz-ui/client/src/CreatePostForm.css
+++ b/beatbuzz-ui/client/src/CreatePostForm.css
@@ -4,7 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+    max-width: 400px;
+    margin: 0 auto;
+  padding: 20px;  }
   
   .input-field {
     margin: 10px 0;
@@ -12,6 +14,11 @@
     width: 300px;
     border: 1px solid #ccc;
     border-radius: 4px;
+  }
+  
+  .star-raiting {
+    width: 100%;
+    text-align: center;
   }
   
   .submit-button {
@@ -22,6 +29,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    width: 50%;
   }
   
   .submit-button:hover {
