--- a/beatbuzz-ui/client/src/StarRating.css
+++ b/beatbuzz-ui/client/src/StarRating.css
@@ -2,6 +2,7 @@
 
 .star-rating {
     display: inline-block;
+    font-size: 24px;
   }
   
   .star-rating input[type="radio"] {
@@ -10,14 +11,15 @@
   
   .star-rating label {
     cursor: pointer;
+    margin-right: 5px;
   }
   
   .star-rating span {
-    font-size: 24px;
     color: #ccc;
   }
   
   .star-rating .filled {
     color: #f39c12;
   }
+  
   
