--- a/beatbuzz-ui/client/src/CreatePostForm.css
+++ b/beatbuzz-ui/client/src/CreatePostForm.css
@@ -16,7 +16,7 @@
     border-radius: 4px;
   }
   
-  .star-raiting {
+  .star-rating {
     width: 100%;
     text-align: center;
   }
@@ -30,9 +30,17 @@
     border-radius: 4px;
     cursor: pointer;
     width: 50%;
+    text-align: center;
   }
   
   .submit-button:hover {
     background-color: #0056b3;
   }
   
+  .error-message {
+    color: red;
+  }
+
+  .success-message {
+    color: rgb(14, 168, 14);
+  }
